name:                mapview-json
version:             1
synopsis:            A JSON encoding for mapview.
homepage:            https://mapview.noexc.org/json
license:             MIT
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2016 Ricky Elrod
category:            KD8ZRC
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.10

library
  exposed-modules:
    KD8ZRC.Mapview.Encoding.JSON
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , aeson >= 0.9 && < 0.12
                     , bytestring >= 0.10 && < 0.11
                     , text >= 1 && < 2
                     , transformers >= 0.3 && < 0.6
                     , mapview
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall